- 03: Bugfix #465: Arranger couldn't open Structorizer sub-instances anymore <2>
- 04: Bugfix #468: User guide action was associated to wrong toolbar button <2>
- 04: Enh. #452/#459: Further revision to the mechanisms of the guided tours <2>
- 04: Enh. #469: Accelerator keys for Executor (Ctrl-R) and Turtleizer <2>
- 04: Bugfixes in COBOL import (USAGE parsing, SEARCH, EXIT) <Simon Sobisch>
- 04: Bugfix #475: Import of COBOL paragraphs broke sections [Simon Sobisch]2
- 04: Bugfix #480: Import of COBOL level-77 data and record array initialization <2>
- 04: Bugfix #473: COBOL argument types failed to be generated [Simon Sobisch]2
- 04: Bugfix #485: Workaround for intrinsic COBOL functions [Simon Sobisch]2

Version 3.27 (2017.10.30)
- 01: Issue #312: Work area now ensured to get initial focus <2>
- 01: Issue #319: Arranger index indicates "covered" status via icon now <2>
- 01: Issue #101: A dependent Structorizer now shows instance number in title <2>
- 01: Enh. #329: New Analyser warning on variable names "I", "l", or "O" <2>
- 01: Bugfix #330: With "Nimbus" look & feel checkbox states weren't visible <2>
- 01: Issue #81: DPI awareness workaround (GUI scaling) substantially improved <2>
- 01: Issue #81: New Preferences menu item "GUI Scaling" to preset next start <2>
- 02: Bugfix #233: Element insertion by keys F6 and F8 didn't work <2>
- 02: Issue #305: Diagram name and dirtiness changes notified to arranger index <2>
- 02: Enh. #333: Compound comparison operators displayed as symbols ≠, ≤, ≥ <2>
- 02: Enh. #335: Pascal/BASIC variable declarations in instructions tolerated <2>
- 02: Bugfix #336: Variable list proposed by code generators for declaration <2>
- 02: Issue #306: Possibility to start with several diagrams from command line <2>
- 02: Enh. #290: Start from command line with Arranger files as arguments, too <2>
- 02: Enh. #335: Type info retrieval for enhanced declarations on code export <2>